--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "lucide-react": "^0.556.0",
     "next": "16.0.6",
     "next-pwa": "^5.6.0",
     "react": "19.2.0",
