--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Greenlay Solar India",
-  "short_name": "greenlay-solar-india",
+  "short_name": "Greenlay Solar India",
   "description": "Solar power flow & savings dashboard",
   "start_url": "/",
   "scope": "/",
